[gd_scene load_steps=12 format=3 uid="uid://d00rmvfv0230"]

[ext_resource type="Script" uid="uid://d240brxrofl2l" path="res://components/hand/enemy_hand/enemy_list_item.gd" id="1_ockvw"]
[ext_resource type="Texture2D" uid="uid://ch2ogjtw3mqkq" path="res://art/ui/player_avatars/player_avatar_2.png" id="2_wkc0j"]
[ext_resource type="Texture2D" uid="uid://dtob137g50gap" path="res://art/ui/icons/skip.png" id="3_7xfdo"]
[ext_resource type="FontFile" uid="uid://bod7p1tgb4nl8" path="res://art/fonts/PixeloidSans-Bold.ttf" id="3_30mqa"]
[ext_resource type="Texture2D" uid="uid://dxx7hlgs47cmu" path="res://art/ui/icons/draw_two.png" id="5_30mqa"]

[sub_resource type="Shader" id="Shader_ockvw"]
code = "shader_type canvas_item;

uniform vec4 color: source_color = vec4(1.0);
uniform float direction: hint_range(-1.0, 1.0, 1.0) = -1.0;
uniform float frequency: hint_range(0.1, 30.0, 0.1) = 15.0;
uniform float speed: hint_range(0.5, 20, 0.5) = 3.0;
uniform float radius: hint_range(0.01, 1.0, 0.01) = 1.0;
uniform float line_thickness: hint_range(0.0, 0.5, 0.01) = 0.03;
uniform bool effect_enabled = true;

void fragment() {
    vec4 base_color = texture(TEXTURE, UV);

    if (effect_enabled) {
        vec4 circle_outline;
        vec2 pos = UV - vec2(0.5);
        float circle = step(length(pos), radius);
        float angle = atan(pos.y, pos.x);
        float wave = 0.5 * sin(direction * frequency * angle + TIME * speed) + 0.5;
        circle *= step(0.5, wave);
        circle_outline = vec4(color.rgb, circle * color.a);

        float rect_alpha = 1.0 - step(abs(pos.x), (0.5 - line_thickness)) * step(abs(pos.y), (0.5 - line_thickness));
        vec4 effect = circle_outline * vec4(1.0, 1.0, 1.0, rect_alpha);

        COLOR = mix(base_color, effect, effect.a);
    } else {
        COLOR = base_color;
    }
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_anwp8"]
resource_local_to_scene = true
shader = SubResource("Shader_ockvw")
shader_parameter/color = Color(0, 0.659018, 0.99551, 1)
shader_parameter/direction = 1.0
shader_parameter/frequency = 2.0
shader_parameter/speed = 10.0
shader_parameter/radius = 1.0
shader_parameter/line_thickness = 0.18
shader_parameter/effect_enabled = true

[sub_resource type="Animation" id="Animation_af41y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyAnimations/SkipIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyAnimations/SkipIcon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAnimations:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyAnimations/SkipIcon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemyAnimations/DrawTwoIcon:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EnemyAnimations/DrawTwoIcon:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_u355e"]
resource_name = "draw_two"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyAnimations/DrawTwoIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.25, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyAnimations/DrawTwoIcon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAnimations/SkipIcon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyAnimations:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_7xfdo"]
resource_name = "skip"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyAnimations/SkipIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.25, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyAnimations/SkipIcon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.261799, -0.261799, 0.261799, -0.261799, 0.261799, -0.261799, 0.261799, -0.261799, 0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAnimations:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyAnimations/SkipIcon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemyAnimations/DrawTwoIcon:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_30mqa"]
_data = {
&"RESET": SubResource("Animation_af41y"),
&"draw_two": SubResource("Animation_u355e"),
&"skip": SubResource("Animation_7xfdo")
}

[node name="EnemyListItem" type="PanelContainer"]
material = SubResource("ShaderMaterial_anwp8")
offset_right = 37.0
offset_bottom = 13.0
script = ExtResource("1_ockvw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_30mqa")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AvatarTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("2_wkc0j")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="NameLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 4
text = "Enemy"
fit_content = true
autowrap_mode = 0

[node name="HandLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_30mqa")
theme_override_font_sizes/normal_font_size = 3
text = "7 cards"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="EnemyAnimations" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SkipIcon" type="TextureRect" parent="EnemyAnimations"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(7, 7)
texture = ExtResource("3_7xfdo")
expand_mode = 4
stretch_mode = 5

[node name="DrawTwoIcon" type="TextureRect" parent="EnemyAnimations"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(7, 7)
texture = ExtResource("5_30mqa")
expand_mode = 4
stretch_mode = 5
